--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -290,7 +290,7 @@ content-padding = 1
 ;content-background = ${colors.shade1}
 content-underline = ${colors.adapta-cyan}
 content-foreground = ${colors.fg}
-click-left =bash ${HOME}/.config/rofi/scripts/powermenu_t4 
-click-rigth =bash ${HOME}/.config/rofi/scripts/powermenu_t4 
+click-left =bash ${HOME}/.dotfiles/.config/rofi/scripts/powermenu_t4 
+click-rigth =bash ${HOME}/.dotfiles/.config/rofi/scripts/powermenu_t4 
 
 ;==========================================================
