feat: :sparkles: add duskfox theme overrides, buffer and mapping configurations

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,8 +17,8 @@ for-modules = 1
 [bar/main]
 width = 100%:-10
 height = 22
-override-redirect = true
 offset-x = 5
+wm-restack = bspwm
 offset-y = 5
 fixed-center = true
 line-size = 2
