fix: :bug: update bspwmrc and kitty.conf for battery and window settings respectively

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,8 +10,8 @@ include color.ini
 #Fonts
 font_family      MesloLGS NF
 font_size 11
-
-disable_ligatures never
+window_margin_width 0
+window_padding_width 10
 
 #Url
 url_color #61afef
