refactor: :recycle: refactor polybar and bspwm configurations with updated colors and scripts

--- a/.config/polybar/shapes/glyphs.ini
+++ b/.config/polybar/shapes/glyphs.ini
@@ -8,8 +8,8 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [glyph]
-gleft = 
-gright = 
+gleft =  
+gright = 
 
 [module/left1]
 type = custom/text
@@ -20,11 +20,45 @@ content-font = 3
 
 [module/left2]
 type = custom/text
-content-background = ${color.background}
+content-background = ${color.shade3}
 content-foreground = ${color.shade2}
 content = ${glyph.gleft}
 content-font = 3
 
+[module/left3]
+type = custom/text
+content-background = ${color.shade4}
+content-foreground = ${color.shade3}
+content = ${glyph.gleft}
+content-font = 3
+
+[module/left4]
+type = custom/text
+content-background = ${color.shade5}
+content-foreground = ${color.shade4}
+content = ${glyph.gleft}
+content-font = 3
+
+[module/left5]
+type = custom/text
+content-background = ${color.shade6}
+content-foreground = ${color.shade5}
+content = ${glyph.gleft}
+content-font = 3
+
+[module/left6]
+type = custom/text
+content-background = ${color.shade7}
+content-foreground = ${color.shade6}
+content = ${glyph.gleft}
+content-font = 3
+
+[module/left7]
+type = custom/text
+content-background = ${color.background}
+content-foreground = ${color.shade5}
+content = ${glyph.gleft}
+content-font = 3
 # ==================================
 
 [module/right1]
