--- a/.config/polybar/colorblocks/colors.ini
+++ b/.config/polybar/colorblocks/colors.ini
@@ -12,19 +12,19 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #141C21
-foreground = #F5F5F5
-foreground-alt = #FFFFFF
+background = #FFFFFF
+foreground = #141C21
+foreground-alt = #141C21
 alpha = #00000000
 
 ;; shades
-shade1 = #880E4F
-shade2 = #AD1457
-shade3 = #C2185B
-shade4 = #D81B60
-shade5 = #E91E63
-shade6 = #EC407A
-shade7 = #F06292
-shade8 = #F48FB1
+shade1 = #006064
+shade2 = #00838F
+shade3 = #0097A7
+shade4 = #00ACC1
+shade5 = #00BCD4
+shade6 = #26C6DA
+shade7 = #4DD0E1
+shade8 = #80DEEA
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
