--- a/.config/polybar/shapes/config.ini
+++ b/.config/polybar/shapes/config.ini
@@ -62,7 +62,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 32
+height = 28 
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -140,9 +140,9 @@ font-2 = "Iosevka Nerd Font:style=Medium:size=22;5"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher left1 title left2
-modules-center = workspaces sep mpd
-modules-right = right7 color-switch right6 updates right5 alsa right4 battery right3 network right2 date right1 sysmenu
+modules-left = workspaces 
+modules-center = currentApps  
+modules-right = right6 cpu right5 memory right4 temperature right3 battery right2 date right1 sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
