--- a/.config/polybar/shapes/modules.ini
+++ b/.config/polybar/shapes/modules.ini
@@ -127,8 +127,8 @@ full-at = 99
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT1
-adapter = ACAD
+battery = BAT0
+adapter = AC
 
 ; If an inotify event haven't been reported in this many
 ; seconds, manually poll for new values.
@@ -152,7 +152,7 @@ time-format = %H:%M
 ;   <ramp-capacity>
 ;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
-format-charging-background = ${color.shade4}
+format-charging-background = ${color.shade3}
 format-charging-padding = 1
 
 ; Available tags:
@@ -161,7 +161,7 @@ format-charging-padding = 1
 ;   <ramp-capacity>
 ;   <animation-discharging>
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-background = ${color.shade4}
+format-discharging-background = ${color.shade3}
 format-discharging-padding = 1
 
 ; Available tags:
@@ -170,7 +170,7 @@ format-discharging-padding = 1
 ;   <ramp-capacity>
 format-full = <label-full>
 format-full-prefix = 
-format-full-background = ${color.shade4}
+format-full-background = ${color.shade3}
 format-full-padding = 1
 
 ; Available tokens:
@@ -658,8 +658,8 @@ label = " %mb_used% "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/mpd]
-type = internal/mpd
+;; [module/mpd]
+;; type = internal/mpd
 
 ; Host where mpd is running (either ip or domain name)
 ; Can also be the full path to a unix socket where mpd is running.
@@ -669,7 +669,7 @@ type = internal/mpd
 
 ; Seconds to sleep between progressbar/song timer sync
 ; Default: 1
-interval = 1
+;interval = 1
 
 ; Available tags:
 ;   <label-song> (default)
@@ -689,9 +689,9 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = <label-song> <icon-prev> <toggle> <icon-next>
-format-online-prefix = 
-format-online-foreground = ${color.foreground-alt}
+;;format-online = <label-song> <icon-prev> <toggle> <icon-next>
+;;format-online-prefix = 
+;;format-online-foreground = ${color.foreground-alt}
 
 ;format-playing = ${self.format-online}
 ;format-paused = ${self.format-online}
@@ -699,9 +699,9 @@ format-online-foreground = ${color.foreground-alt}
 
 ; Available tags:
 ;   <label-offline>
-format-offline = <label-offline>
-format-offline-prefix = 
-format-offline-foreground = ${color.foreground-alt}
+;format-offline = <label-offline>
+;format-offline-prefix = 
+;format-offline-foreground = ${color.foreground-alt}
 
 ; Available tokens:
 ;   %artist%
@@ -710,38 +710,38 @@ format-offline-foreground = ${color.foreground-alt}
 ;   %date%
 ;   %title%
 ; Default: %artist% - %title%
-label-song =  " %artist% - %title%"
-label-song-maxlen = 25
-label-song-ellipsis = true
+;label-song =  " %artist% - %title%"
+;label-song-maxlen = 25
+;label-song-ellipsis = true
 
 ; Available tokens:
 ;   %elapsed%
 ;   %total%
 ; Default: %elapsed% / %total%
-label-time = %elapsed% / %total%
+;label-time = %elapsed% / %total%
 
 ; Available tokens:
 ;   None
-label-offline = " Offline"
+;label-offline = " Offline"
 
 ; Only applies if <icon-X> is used
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-next = 
-icon-prev = 
-icon-seekf = 
-icon-seekb = 
-icon-random = 
-icon-repeat = 
-icon-repeatone = 
-icon-single = 
-icon-consume =
+;icon-play = 
+;icon-pause = 
+;icon-stop = 
+;icon-next = 
+;icon-prev = 
+;icon-seekf = 
+;icon-seekb = 
+;icon-random = 
+;icon-repeat = 
+;icon-repeatone = 
+;icon-single = 
+;icon-consume =
 
 ; Used to display the state of random/repeat/repeatone/single
 ; Only applies if <icon-[random|repeat|repeatone|single]> is used
-toggle-on-foreground = ${color.foreground}
-toggle-off-foreground = ${color.background}
+;toggle-on-foreground = ${color.foreground}
+;toggle-off-foreground = ${color.background}
 
 ; Only applies if <bar-progress> is used
 ;;bar-progress-width = 45
@@ -754,11 +754,11 @@ toggle-off-foreground = ${color.background}
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
-interface = eth0
+interface = enp1s0 
 
 [module/wireless-network]
 type = internal/network
-interface = wlp3s0
+interface = wlan0
 
 ; Normal Module
 [module/network]
@@ -876,7 +876,7 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
-format-volume-background = ${color.shade3}
+format-volume-background = ${color.shade5}
 format-volume-padding = 1
 
 ; Available tags:
@@ -885,7 +885,7 @@ format-volume-padding = 1
 ;   <bar-volume>
 format-muted = <label-muted>
 format-muted-prefix = 
-format-muted-background = ${color.shade3}
+format-muted-background = ${color.shade5}
 format-muted-padding = 1
 
 ; Available tokens:
@@ -925,7 +925,7 @@ thermal-zone = 0
 ; to find path to desired file
 ; Default reverts to thermal zone setting
 ;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/pci0000:00/0000:00:01.3/0000:01:00.0/hwmon/hwmon0/temp1_input
+hwmon-path = /sys/devices/pci0000:00/0000:00:1d.0/0000:03:00.0/nvme/nvme0/hwmon3/temp1_input
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
@@ -1102,5 +1102,4 @@ label-active-padding = 1
 label-urgent-padding = 1
 label-occupied-padding = 1
 label-empty-padding = 1
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
