--- a/.config/polybar/shapes/user_modules.ini
+++ b/.config/polybar/shapes/user_modules.ini
@@ -6,6 +6,23 @@
 ;; └──────────────────────────────────────────────────────────────────────────────-----┘
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/currentApps]
+type = custom/script
+exec = ~/.config/polybar/scripts/appsInWorkSpaces.sh 2>/dev/null
+label-padding = 1
+tail = true
+
+
+[module/barsStyle]
+type = custom/script
+exec = ~/.config/polybar/shapes/scripts/style-switch.sh
+content = " "
+
+; "content" has the same properties as "format-NAME"
+content-background = ${color.shade1}
+content-foreground = ${color.foreground}
+content-padding = 1
+
 
 [module/updates]
 type = custom/script
@@ -46,8 +63,8 @@ label = "%output% "
 ;   %pid%
 ;
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c [command]"
-click-left = exo-open --launch TerminalEmulator &
-click-right = exo-open --launch TerminalEmulator &
+click-left = kitty sh ~/.config/polybar/shapes/scripts/updates.sh
+;click-right = exo-open --launch TerminalEmulator &
 ;;double-click-left = echo double left %counter%
 ;;double-click-middle = echo double middle %counter%
 ;;double-click-right = echo double right %counter%
